--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-click==8.1.7
-Flask==3.0.3
-gunicorn==22.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==2.1.5
-pandas==2.2.2
-yfinance==0.2.40
-# Add other libraries and their versions as needed
+numpy==2.3.3
+pandas==2.3.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+six==1.17.0
+tzdata==2025.2
