--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-numpy==2.3.3
+requests==2.32.3
 pandas==2.3.2
-python-dateutil==2.9.0.post0
-pytz==2025.2
-six==1.17.0
-tzdata==2025.2
 Flask==3.0.3
 gunicorn==22.0.0
-yfinance==0.2.40
